--- a/src/views/Dashboard/Dashboard.scss
+++ b/src/views/Dashboard/Dashboard.scss
@@ -36,6 +36,14 @@
     border-color: #e2e8f0;
     opacity: 1;
   }
+  .v-field__outline__start{
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+  }
+  .v-field__outline__end{
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
   .select-right {
     .v-select__selection-text {
       font-size: 13px;
@@ -82,5 +90,118 @@
   .unumpay-tooltip{
     color: #888888;
     margin-top: 10px;
+  }
+}
+.transaction-container {
+   gap: 2%;
+  .recent-transaction,
+  .payment-provider {
+    width: 50%;
+    background: #fff;
+    min-height: 200px;
+  }
+  .payemt-provider-wrapper,
+  .recent-transaction-wrapper {
+    padding: 1rem;
+  }
+  .v-row {
+    height: 82vh;
+    overflow-y: scroll;
+    padding: 1rem 1rem 2rem 1rem;
+  }
+  .v-row::-webkit-scrollbar {
+    width: 8px;
+  }
+  .v-row::-webkit-scrollbar-thumb {
+    background-color: #444444;
+    border-radius: 4px;
+  }
+  .total-amount {
+    font-weight: 700;
+    font-size: 14px;
+  }
+  .fisrt-row {
+    margin-bottom: 0.5rem;
+  }
+  .pay-pro {
+    font-weight: 550;
+    font-size: 12px;
+    background: #0000000f;
+    padding: 0.4rem 1.3rem;
+    border-radius: 15px;
+  }
+  .tra-id {
+    font-weight: 450;
+    font-size: 12px;
+  }
+  .gap08 {
+    gap: 8px;
+  }
+  .time {
+    font-weight: 550;
+    font-size: 12px;
+    color: #616161;
+  }
+  .total-amount.left{
+    direction: ltr;
+  }
+}
+.manage-btn {
+  color: #303030;
+  text-decoration: none;
+  padding: 0.4rem;
+  margin-bottom: 16px;
+}
+
+.payment-provider {
+  .provider-image {
+    border: 1px solid #b8babd;
+    padding: 0.5rem 0.5rem;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
+    box-shadow: 2px 2px 1px #0000000d;
+  }
+  .provider-image img {
+    object-fit: contain;
+  }
+  .transaction-detail {
+    margin-bottom: 0;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 16px;
+  }
+  .provider-name {
+    line-height: 24px;
+  }
+  .transaction-amt {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .transaction-amt.left{
+    text-align: left;
+    direction: ltr;
+  }
+  .transaction-amt.right{
+     text-align: right;
+  }
+  .provider-chrages {
+    font-weight: 500;
+    font-size: 10px;
+  }
+}
+.percentageRight{
+  direction: ltr;
+  display: inline-flex
+}
+
+@media screen and (max-width:991.9px) {
+  .transaction-container{
+    flex-wrap: wrap;
+    row-gap: 20px;
+  }
+  .recent-transaction ,.payment-provider {
+    width: 100%!important;
   }
 }
