--- a/src/index.scss
+++ b/src/index.scss
@@ -116,6 +116,10 @@ img {
   font-size: 12px !important;
 }
 
+.fontSize10 {
+  font-size: 10px !important;
+}
+
 .capatilize {
   text-transform: capitalize;
 }
@@ -169,7 +173,7 @@ body *::-webkit-scrollbar {
 .pageWidth {
   width: 97% !important;
   max-width: 97% !important;
-  margin: 0 auto!important;
+  margin: 0 auto !important;
 }
 .v-snackbar__wrapper {
   box-shadow: none !important;
@@ -206,13 +210,13 @@ body *::-webkit-scrollbar {
   background: #fedad9 !important;
   color: #8e1f0b !important;
 }
-a{
+a {
   text-decoration: none;
 }
-.center{
+.center {
   text-align: center;
 }
-.cursorPointer{
+.cursorPointer {
   cursor: pointer;
 }
 .col-wrapper {
@@ -220,5 +224,16 @@ a{
   height: 100%;
 }
 .stats-row {
-  margin: unset!important;
+  margin: unset !important;
+}
+table {
+  td {
+    font-size: 11px;
+    font-weight: 400;
+    color: #303030;
+  }
+  .v-data-table-header__content{
+    font-size: 12px;
+    font-weight: 500;
+  }
 }
