--- a/src/views/Transactions/Transaction.scss
+++ b/src/views/Transactions/Transaction.scss
@@ -17,7 +17,7 @@
   .v-btn__content {
     font-size: 14px;
   }
-  .v-select__selection-text{
+  .v-select__selection-text {
     margin-top: -2px;
   }
   button {
@@ -32,22 +32,38 @@
     }
   }
 }
+.transaction-details {
+  table {
+    .v-chip__content {
+      font-size: 11px !important;
+      text-transform: capitalize;
+    }
+  }
+  .v-data-table-footer__items-per-page *,
+  .v-data-table-footer__info * {
+    font-size: 12px !important;
+  }
+  .v-field__input {
+    height: 32px !important;
+    min-height: 32px !important;
+  }
+}
 .rtl-calendar .vc-prev,
 .rtl-calendar .vc-next {
   transform: rotate(180deg);
 }
 .calandar-save-btn {
-    width: 7rem;
-    font-weight: 500;
-    font-size: 14px;
-    border-radius: 8px;
-    height: 32px!important;
-    text-transform: capitalize;
+  width: 7rem;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 8px;
+  height: 32px !important;
+  text-transform: capitalize;
 }
 .custom-dropdown .v-list-item-title {
-  font-size: 13px;   
-  color: #333; 
-  font-weight: 500; 
+  font-size: 13px;
+  color: #333;
+  font-weight: 500;
   text-transform: capitalize;
 }
 .custom-dropdown .v-list {
@@ -55,30 +71,92 @@
   overflow-y: auto;
   scrollbar-width: thin;
 }
-@media  screen and (min-width:992px) {
-  .transaction-stats .stats-row.left  {
+.popup-heading {
+  color: #666666;
+}
+.popup-heading-container {
+  border-bottom: 1px solid #e4e7eb;
+  button,
+  button:hover {
+    box-shadow: unset;
+  }
+}
+.customer-detail-container {
+  padding: 0.5rem;
+}
+.customer-name-status .ctmr-name strong {
+  color: #000;
+}
+.customer-amt-detail h4 {
+  color: #000;
+}
+.cstmr-status .v-chip {
+  font-size: 10px;
+  text-transform: capitalize;
+  height: 20px;
+  font-weight: 500;
+}
+.customer-amt-detail .unumpay-charges {
+  color: #444444;
+}
+.cstm-style {
+  color: #666666;
+}
+.item-value {
+  border: 1px solid #e5e5e5;
+  width: 100%;
+  display: block;
+  padding: 0.3rem;
+  background: #ecf3ff66;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 13px;
+  color: #444444;
+}
+.cstmr-full-detail-container {
+  width: 100%;
+  margin: 0 auto;
+  row-gap: 20px;
+  column-gap: 17px;
+}
+@media screen and (min-width: 992px) {
+  .transaction-stats .stats-row.left {
     .column:not(:last-child) {
-      padding-right: 12px!important;
+      padding-right: 12px !important;
     }
   }
-  .transaction-stats .stats-row.right  {
+  .cstmr-full-detail {
+    width: 100%;
+    max-width: 48%;
+  }
+  .transaction-stats .stats-row.right {
     .column:not(:last-child) {
-      padding-left: 12px!important;
+      padding-left: 12px !important;
     }
   }
 }
-@media  screen and (max-width:992px) {
-  .stats-row  {
-    row-gap: 12px!important;
+@media screen and (max-width: 992px) {
+  .stats-row {
+    row-gap: 12px !important;
   }
   .transaction-stats .stats-row.left {
     .column {
-      padding-right: 12px!important;
+      padding-right: 12px !important;
     }
   }
   .transaction-stats .stats-row.right {
-  .column {
-    padding-left: 12px!important;
+    .column {
+      padding-left: 12px !important;
+    }
+  }
+  .cstmr-full-detail {
+    width: 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
   }
 }
+@media screen and (max-width: 1150px) {
+  .v-col-sm-6.v-col-md-2.v-col-12.download-btn.pa-2.filter-col img {
+    display: none;
+  }
 }
