--- a/src/views/AdvancePayments/AdvancePayments.scss
+++ b/src/views/AdvancePayments/AdvancePayments.scss
@@ -16,26 +16,29 @@
     font-size: 10px;
     font-weight: 600;
   }
-  .v-chip__content{
+  .v-chip__content {
     text-transform: capitalize;
   }
-  .options-btn{
-     opacity: 1;
+  .options-btn {
+    opacity: 1;
   }
   table {
-    td,.v-chip__content {
+    td,
+    .v-chip__content {
       font-size: 11px;
       font-weight: 400;
       color: #303030;
+    }
   }
-  }
-  .v-data-table-footer__items-per-page *, .v-data-table-footer__info *{
-   font-size: 12px !important;
+  .v-data-table-footer__items-per-page *,
+  .v-data-table-footer__info * {
+    font-size: 12px !important;
   }
 }
 
 .add-payment-dialog {
-  button,button:hover{
+  button,
+  button:hover {
     box-shadow: unset;
     font-size: 13px;
     text-transform: capitalize;
@@ -45,10 +48,11 @@
     font-size: 13px;
     color: #666666;
   }
-  .v-field{
+  .v-field {
     border-radius: 8px;
   }
-  input::placeholder,textarea::placeholder {
+  input::placeholder,
+  textarea::placeholder {
     font-size: 13px;
     color: #999999;
     font-weight: 400;
@@ -84,3 +88,4 @@
     }
   }
 }
+
