--- a/src/index.scss
+++ b/src/index.scss
@@ -109,6 +109,9 @@ img {
 .fontSize24 {
   font-size: 24px !important;
 }
+.fontSize20 {
+  font-size: 20px !important;
+}
 
 .fontSize18 {
   font-size: 18px !important;
@@ -135,7 +138,7 @@ img {
 }
 
 .capatilize {
-  text-transform: capitalize;
+  text-transform: capitalize!important;
 }
 
 body::-webkit-scrollbar,
