--- a/src/index.scss
+++ b/src/index.scss
@@ -110,6 +110,10 @@ img {
   font-size: 40px !important;
 }
 
+.fontSize36 {
+  font-size: 36px !important;
+}
+
 .fontSize24 {
   font-size: 24px !important;
 }
