--- a/src/views/AdvancePayments/AdvancePayments.scss
+++ b/src/views/AdvancePayments/AdvancePayments.scss
@@ -7,6 +7,9 @@
     width: 25px;
   }
 }
+.payment-filter-wrapper{
+  margin-top: 16px!important;
+}
 .advance-pay-table {
   .copy-btn {
     cursor: pointer;
