--- a/src/index.scss
+++ b/src/index.scss
@@ -304,3 +304,10 @@ table {
 .gap05{
   gap: 5px;
 }
+
+.margin-top-16{
+  margin-top: 16px!important;
+}
+.margin-bottom-16{
+  margin-bottom: 16px!important;
+}
